--- a/Website/HTML/main.html
+++ b/Website/HTML/main.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vars.css">
-  <link rel="stylesheet" href="./style.css">
+  <!-- <link rel="stylesheet" href="./CSS/vars.css"> -->
+  <link rel="stylesheet" href="../CSS/main.css">
   
   
   <style>
@@ -35,12 +35,14 @@
        padding: 0;
    }
    </style>
-  <title>Document</title>
+  <title>unplugged</title>
 </head>
+
 <body>
   <div class="frame-4">
     <div class="welcome-page">
-      <div class="header">
+
+      <header class="header">
         <div class="navigation-pill-list">
           <div class="navigation-pill">
             <div class="title">Orte</div>
@@ -60,7 +62,7 @@
             <div class="button4">Register</div>
           </div>
         </div>
-      </div>
+      </header>
     </div>
     <div class="frame-2">
       <div class="image-2">
