feat: finished index page prototype and test if header and footer are working well

--- a/Website/HTML/footer.html
+++ b/Website/HTML/footer.html
@@ -39,7 +39,7 @@
     </head>
 
     <body>
-        <div class="footer">
+        <footer>
             <div class="button-list">
                 <img class="logo-litec" src="../img/litec-10.png" />
                 <img class="logo-instagram" src="../img/logo-instagram0.svg" />
@@ -63,7 +63,7 @@
                     2025 unplugged
                 </div>
             </div>
-        </div>
+        </footer>
 
     </body>
 </html>
