--- a/Website/HTML/header.html
+++ b/Website/HTML/header.html
@@ -58,12 +58,12 @@
                 </button>
             </div>
 
-            <div class="logo-text-container">
+            <a href="./index.html" class="logo-text-container">
                 <div class="logo-container">
                     <img class="logo-nav" src="../img/logo-11.png" />
                 </div>
                 <div class="unplugged">unplugged</div>
-            </div>
+            </a>
         </header>
     </body>
 </html>
