--- a/Website/HTML/index.html
+++ b/Website/HTML/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
   <link rel="stylesheet" href="../CSS/header.css">
+  <link rel="stylesheet" href="../CSS/login.css">
   <link rel="stylesheet" href="../CSS/footer.css">
   <link rel="stylesheet" href="../CSS/index.css">
   
@@ -54,17 +56,18 @@
     </div>
 
     <div class="button-container">
-        <button class="button login-button">
+        <button type="button" class="button login-button">
             <div class="button-text login">Einloggen</div>
         </button>
-        <button class="button register-button">
+        <button type="button" class="button register-button">
             <div class="button-text register">Registrieren</div>
         </button>
     </div>
+  </div>
 
     <a href="./index.html" class="logo-text-container">
         <div class="logo-container">
-            <img class="logo-nav" src="../img/logo-11.png" />
+            <img class="logo-nav" src="../img/unplugged_coloured.png" />
         </div>
         <div class="unplugged">unplugged</div>
     </a>
@@ -122,10 +125,10 @@
 
   <footer>
     <div class="button-list">
-        <img class="logo-litec" src="../img/litec-10.png" />
-        <img class="logo-instagram" src="../img/logo-instagram0.svg" />
-        <img class="logo-youtube" src="../img/logo-you-tube0.svg" />
-        <img class="logo-tiktok" src="../img/image-30.png" />
+        <a href="https://www.litec.ac.at/"><img class="logo-litec" src="../img/litec.png" /></a>
+        <a href="https://www.instagram.com/litec.htl/"><img class="logo-instagram" src="../img/instagram.svg" /></a>
+        <a href="https://www.youtube.com/@litechtlpaul-hahn582"><img class="logo-youtube" src="../img/youtube.svg" /></a>
+        <a href="https://www.tiktok.com/@litec.htl?_t=ZN-8tS1FR6wXfq&_r=1"><img class="logo-tiktok" src="../img/tiktok.png" /></a>
     </div>
 
     <div class="footer-links-container">
@@ -135,12 +138,12 @@
 
     <div class="unplugged-container">
         <div class="unplugged-logo-text-container">
-            <img class="unplugged-logo" src="../img/logo-bw-10.png" />
+            <img class="unplugged-logo" src="../img/unplugged_black.png" />
             <div class="unplugged-text">unplugged</div>
         </div>
         <div class="unplugged-copyright">
             Copyright
-            <img src="../img/image-40.png" />
+            <img src="../img/copyright.png" />
             2025 unplugged
         </div>
     </div>
