changed: about, loc_short, loc_single, contact, so it is the new look again

--- a/Website/HTML/about.html
+++ b/Website/HTML/about.html
@@ -1,209 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vars.css">
-  <link rel="stylesheet" href="./style.css">
-  
-  
-  <style>
-   a,
-   button,
-   input,
-   select,
-   h1,
-   h2,
-   h3,
-   h4,
-   h5,
-   * {
-       box-sizing: border-box;
-       margin: 0;
-       padding: 0;
-       border: none;
-       text-decoration: none;
-       background: none;
-   
-       -webkit-font-smoothing: antialiased;
-   }
-   
-   menu, ol, ul {
-       list-style-type: none;
-       margin: 0;
-       padding: 0;
-   }
-   </style>
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Über uns - Unplugged</title>
+    <link rel="stylesheet" href="/CSS/about.css">
 </head>
 <body>
-  <div class="frame-20">
-    <img class="image-12" src="image-120.png" />
-    <div class="group-18">
-      <div class="group-7">
-        <div class="header">
-          <div class="navigation-pill-list">
-            <div class="navigation-pill">
-              <div class="title">Orte</div>
+    <main>
+        <h1>Über uns</h1>
+        <section class="profiles">
+            <div class="profile img1">
+                <img src="/img/about/Florian.png" alt="Florian Kaltenbrunner">
+                <div>
+                    <h2>Florian Kaltenbrunner</h2>
+                    <p>Ich besuche das Linzer Technikum (4AHIT). Des Weiteren bin ich Mitgründer und einer der beiden Entwickler der Website von “unplugged”. Später möchte ich meine Ausbildung im Rahmen eines Studiums fortsetzen.</p>
+                    <blockquote>„Ganz okay wird der, der 1000 Sachen einmal probiert, doch perfekt nur der, der eine Sache 1000-mal trainiert.”</blockquote>
+                </div>
             </div>
-            <div class="navigation-pill">
-              <div class="title">Über uns</div>
+            <div class="profile img2">
+                <img src="/img/about/Joel.png" alt="Joel Kalkusch">
+                <div>
+                    <h2>Joel Kalkusch</h2>
+                    <p>Hey, ich bin Joel Kalkusch und bin Schüler des Linzer Technikums. Ich agiere als Entwickler und bin einer der Gründer von “unplugged”. Ich gehe in die 4. Klasse Informationstechnologie und bin 19 Jahre alt.</p>
+                    <blockquote>“Trauer ist der Beweis, dass man glücklich war. Und wer einmal glücklich war, kann es wieder sein”</blockquote>
+                </div>
             </div>
-            <div class="navigation-pill">
-              <div class="title">Kontakt</div>
+            <div class="profile img1">
+                <img src="/img/about/Miriam.png" alt="Miriam Aistleitner">
+                <div>
+                    <h2>Miriam Aistleitner</h2>
+                    <p>Body text for whatever you'd like to say...</p>
+                </div>
             </div>
-          </div>
-          <div class="header-auth">
-            <div class="button">
-              <div class="button2">Einloggen</div>
+            <div class="profile img2">
+                <img src="/img/about/" alt="Mario Steinbauer">
+                <div>
+                    <h2>Mario Steinbauer</h2>
+                    <p>Mein Name ist Mario Steinbauer. Ich befasse mich in meiner Freizeit sehr gern mit Psychologie. Mir ist das Projekt ein Anliegen, weil ich, sowie viele andere Jugendliche in Österreich, das Gefühl von Isolation und digitaler Überstimulation nur zu gut kenne. Ein gesundes soziales Umfeld ist essenziell für ein gutes Wohlbefinden.</p>
+                </div>
             </div>
-            <div class="button3">
-              <div class="button4">Registrieren</div>
-            </div>
-          </div>
-        </div>
-        <div class="group-6">
-          <div class="group-1">
-            <div class="logo-1">
-              <img class="logo-12" src="logo-11.png" />
-            </div>
-          </div>
-          <div class="unplugged">unplugged</div>
-        </div>
-      </div>
-    </div>
-    <div class="footer">
-      <div class="frame-3">
-        <div class="group-12">
-          <div class="group-11">
-            <img class="image-3" src="image-30.png" />
-            <img class="litec-1" src="litec-10.png" />
-          </div>
-        </div>
-      </div>
-      <div class="title2">
-        <div class="button-list">
-          <div class="x-logo"></div>
-          <img class="logo-instagram" src="logo-instagram0.svg" />
-          <img class="logo-you-tube" src="logo-you-tube0.svg" />
-        </div>
-      </div>
-      <div class="text-link-list">
-        <div class="title3">
-          <div class="text-strong">
-            <div class="text-strong2">Impressum</div>
-          </div>
-        </div>
-      </div>
-      <div class="text-link-list">
-        <div class="title3">
-          <div class="text-strong">
-            <div class="text-strong2">AGB</div>
-          </div>
-        </div>
-      </div>
-      <div class="group-19">
-        <img class="logo-bw-1" src="logo-bw-10.png" />
-        <div class="group-10">
-          <div class="unplugged2">unplugged</div>
-        </div>
-        <div class="group-14">
-          <div class="copyright-2025-unplugged">Copyright 2025 unplugged</div>
-          <img class="image-4" src="image-40.png" />
-        </div>
-      </div>
-    </div>
-    <div class="cards">
-      <div class="card">
-        <img class="image-8" src="image-80.png" />
-        <div class="body">
-          <div class="text">
-            <div class="florian-kaltenbrunner">Florian Kaltenbrunner</div>
-            <div
-              class="ich-besuche-das-linzer-technikum-4-ahit-des-weiteren-bin-ich-mitgr-nder-und-einer-der-beiden-entwickler-der-website-von-unplugged-sp-ter-m-chte-ich-meine-ausbildung-im-rahmen-eines-studiums-fortsetzen-ganz-okay-wird-der-der-1000-sachen-einmal-probiert-doch-perfekt-nur-der-der-eine-sache-1000-mal-trainiert"
-            >
-              Ich besuche das Linzer Technikum (4AHIT). Des Weiteren bin ich
-              Mitgründer und einer der beiden Entwickler der Website von
-              “unplugged”. Später möchte ich meine Ausbildung im Rahmen eines
-              Studiums fortsetzen.
-              <br />
-              <br />
-              “Ganz okay wird der, der 1000 Sachen einmal probiert, doch perfekt
-              nur der, der eine Sache 1000-mal trainiert.”
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card2">
-        <img class="image-7" src="image-70.png" />
-        <div class="body2">
-          <div class="text">
-            <div class="joel-kalkusch">Joel Kalkusch</div>
-            <div
-              class="hey-ich-bin-joel-kalkusch-und-bin-sch-ler-des-linzer-technikums-ich-agiere-als-entwickler-und-bin-einer-der-gr-nder-von-unplugged-ich-gehe-in-die-4-klasse-informationstechnologie-und-bin-19-jahre-alt-trauer-ist-der-beweis-dass-man-gl-cklich-war-und-wer-einmal-gl-cklich-war-kann-es-wieder-sein"
-            >
-              Hey, ich bin Joel Kalkusch und bin Schüler des Linzer Technikums.
-              Ich agiere als Entwickler und bin einer der Gründer von “unplugged”.
-              Ich gehe in die 4. Klasse Informationstechnologie und bin 19 Jahre
-              alt.
-              <br />
-              <br />
-              “Trauer ist der Beweis, dass man glücklich war. Und wer einmal
-              glücklich war, kann es wieder sein”
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div
-          class="image"
-          style="
-            background: url(image0.png) center;
-            background-size: contain;
-            background-repeat: no-repeat;
-          "
-        >
-          <img
-            class="whats-app-bild-2025-02-01-um-22-33-53-28-ce-8-a-97-1"
-            src="whats-app-bild-2025-02-01-um-22-33-53-28-ce-8-a-97-10.png"
-          />
-        </div>
-        <div class="body">
-          <div class="text">
-            <div class="miriam-aistleitner">Miriam Aistleitner </div>
-            <div
-              class="body-text-for-whatever-you-d-like-to-say-add-main-takeaway-points-quotes-anecdotes-or-even-a-very-very-short-story"
-            >
-              Body text for whatever you’d like to say. Add main takeaway points,
-              quotes, anecdotes, or even a very very short story.
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="frame-19">
-      <div class="frame-7">
-        <div class="card3">
-          <img class="image2" src="image1.png" />
-          <div class="body3">
-            <div class="text">
-              <div class="mario-steinbauer">Mario Steinbauer</div>
-              <div
-                class="body-text-for-whatever-you-d-like-to-say-add-main-takeaway-points-quotes-anecdotes-or-even-a-very-very-short-story"
-              >
-                Body text for whatever you’d like to say. Add main takeaway
-                points, quotes, anecdotes, or even a very very short story.
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="text-content-heading">
-      <div class="ber-uns">Über uns</div>
-    </div>
-  </div>
-  
+        </section>
+    </main>
 </body>
 </html>
