--- a/Website/HTML/loc_single.html
+++ b/Website/HTML/loc_single.html
@@ -4,38 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vars.css">
-  <link rel="stylesheet" href="./style.css">
-  
-  
-  <style>
-   a,
-   button,
-   input,
-   select,
-   h1,
-   h2,
-   h3,
-   h4,
-   h5,
-   * {
-       box-sizing: border-box;
-       margin: 0;
-       padding: 0;
-       border: none;
-       text-decoration: none;
-       background: none;
-   
-       -webkit-font-smoothing: antialiased;
-   }
-   
-   menu, ol, ul {
-       list-style-type: none;
-       margin: 0;
-       padding: 0;
-   }
-   </style>
-  <title>Document</title>
+  <link rel="stylesheet" href="/CSS/loc_single.css">
 </head>
 <body>
   <div class="ort-einzeln">
@@ -80,76 +49,6 @@
           suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem
           vel eum iriure dolor in hendrerit in vulputate velit esse
         </div>
-      </div>
-    </div>
-    <div class="footer">
-      <div class="frame-3">
-        <div class="group-12">
-          <div class="group-11">
-            <img class="image-3" src="image-30.png" />
-            <img class="litec-1" src="litec-10.png" />
-          </div>
-        </div>
-      </div>
-      <div class="title3">
-        <div class="button-list">
-          <div class="x-logo"></div>
-          <img class="logo-instagram" src="logo-instagram0.svg" />
-          <img class="logo-you-tube" src="logo-you-tube0.svg" />
-        </div>
-      </div>
-      <div class="text-link-list">
-        <div class="title4">
-          <div class="text-strong">
-            <div class="text-strong2">Impressum</div>
-          </div>
-        </div>
-      </div>
-      <div class="text-link-list2">
-        <div class="title4">
-          <div class="text-strong">
-            <div class="text-strong2">AGB</div>
-          </div>
-        </div>
-      </div>
-      <img class="logo-bw-1" src="logo-bw-10.png" />
-      <div class="group-10">
-        <div class="unplugged">unplugged</div>
-      </div>
-      <div class="group-14">
-        <div class="copyright-2025-unplugged">Copyright 2025 unplugged</div>
-        <img class="image-4" src="image-40.png" />
-      </div>
-    </div>
-    <div class="frame-7">
-      <div class="header">
-        <div class="navigation-pill-list">
-          <div class="navigation-pill">
-            <div class="title5">Orte</div>
-          </div>
-          <div class="navigation-pill">
-            <div class="title5">Über uns</div>
-          </div>
-          <div class="navigation-pill">
-            <div class="title5">Kontakt</div>
-          </div>
-        </div>
-        <div class="header-auth">
-          <div class="button">
-            <div class="button2">Einloggen</div>
-          </div>
-          <div class="button3">
-            <div class="button4">Registrieren</div>
-          </div>
-        </div>
-      </div>
-      <div class="group-6">
-        <div class="group-1">
-          <div class="logo-1">
-            <img class="logo-12" src="logo-11.png" />
-          </div>
-        </div>
-        <div class="unplugged2">unplugged</div>
       </div>
     </div>
   </div>
