--- a/Website/HTML/contact.html
+++ b/Website/HTML/contact.html
@@ -1,155 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vars.css">
-  <link rel="stylesheet" href="./style.css">
-  
-  
-  <style>
-   a,
-   button,
-   input,
-   select,
-   h1,
-   h2,
-   h3,
-   h4,
-   h5,
-   * {
-       box-sizing: border-box;
-       margin: 0;
-       padding: 0;
-       border: none;
-       text-decoration: none;
-       background: none;
-   
-       -webkit-font-smoothing: antialiased;
-   }
-   
-   menu, ol, ul {
-       list-style-type: none;
-       margin: 0;
-       padding: 0;
-   }
-   </style>
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kontaktformular</title>
+    <link rel="stylesheet" href="/CSS/contact.css">
 </head>
 <body>
-  <div class="examples-contact-us">
-    <div class="hero-form">
-      <div class="text-content-title">
-        <div class="title">Kontaktformular</div>
-        <div class="subtitle"></div>
-      </div>
-      <div class="form-contact">
-        <div class="input-field">
-          <div class="label">Vorname</div>
-          <div class="input">
-            <div class="value">Max</div>
-          </div>
-        </div>
-        <div class="input-field">
-          <div class="label">Nachname</div>
-          <div class="input">
-            <div class="value">Muster</div>
-          </div>
-        </div>
-        <div class="input-field">
-          <div class="label">E-Mail</div>
-          <div class="input">
-            <div class="value">max.muster@gmail.com</div>
-          </div>
-        </div>
-        <div class="textarea-field">
-          <div class="label">Nachricht</div>
-          <div class="textarea">
-            <div class="value2">Text</div>
-            <img class="drag" src="drag0.svg" />
-          </div>
-        </div>
-        <div class="button-group">
-          <div class="button">
-            <div class="button2">Absenden</div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="footer">
-      <div class="frame-3">
-        <div class="group-12">
-          <div class="group-11">
-            <img class="image-3" src="image-30.png" />
-            <img class="litec-1" src="litec-10.png" />
-          </div>
-        </div>
-      </div>
-      <div class="title2">
-        <div class="button-list">
-          <div class="x-logo"></div>
-          <img class="logo-instagram" src="logo-instagram0.svg" />
-          <img class="logo-you-tube" src="logo-you-tube0.svg" />
-        </div>
-      </div>
-      <div class="text-link-list">
-        <div class="title3">
-          <div class="text-strong">
-            <div class="text-strong2">Impressum</div>
-          </div>
-        </div>
-      </div>
-      <div class="text-link-list">
-        <div class="title3">
-          <div class="text-strong">
-            <div class="text-strong2">AGB</div>
-          </div>
-        </div>
-      </div>
-      <div class="group-19">
-        <img class="logo-bw-1" src="logo-bw-10.png" />
-        <div class="group-10">
-          <div class="unplugged">unplugged</div>
-        </div>
-        <div class="group-14">
-          <div class="copyright-2025-unplugged">Copyright 2025 unplugged</div>
-          <img class="image-4" src="image-40.png" />
-        </div>
-      </div>
-    </div>
-    <div class="group-7">
-      <div class="header">
-        <div class="navigation-pill-list">
-          <div class="navigation-pill">
-            <div class="title4">Orte</div>
-          </div>
-          <div class="navigation-pill">
-            <div class="title4">Über uns</div>
-          </div>
-          <div class="navigation-pill">
-            <div class="title4">Kontakt</div>
-          </div>
-        </div>
-        <div class="header-auth">
-          <div class="button3">
-            <div class="button4">Einloggen</div>
-          </div>
-          <div class="button5">
-            <div class="button2">Registrieren</div>
-          </div>
-        </div>
-      </div>
-      <div class="group-6">
-        <div class="group-1">
-          <div class="logo-1">
-            <img class="logo-12" src="logo-11.png" />
-          </div>
-        </div>
-        <div class="unplugged2">unplugged</div>
-      </div>
-    </div>
-  </div>
-  
+    <main>
+        <h1>Kontaktformular</h1>
+        <form>
+            <label for="vorname">Vorname</label>
+            <input type="text" id="vorname" placeholder="Max" disabled>
+
+            <label for="nachname">Nachname</label>
+            <input type="text" id="nachname" placeholder="Muster" disabled>
+
+            <label for="email">E-Mail</label>
+            <input type="email" id="email" placeholder="max.muster@gmail.com" disabled>
+
+            <label for="nachricht">Nachricht</label>
+            <textarea id="nachricht" placeholder="Text"></textarea>
+
+            <button type="submit">Absenden</button>
+        </form>
+    </main>
 </body>
 </html>
