changed: miriams text

--- a/Website/HTML/about.html
+++ b/Website/HTML/about.html
@@ -30,7 +30,7 @@
                 <img src="/img/about/Miriam.png" alt="Miriam Aistleitner">
                 <div>
                     <h2>Miriam Aistleitner</h2>
-                    <p>Body text for whatever you'd like to say...</p>
+                    <p>Ich bin Miriam Aistleitner, 18 Jahre alt und gehe in die Paul Hahn. Ich habe schon sehr früh Erfahrung mit Psychischen Problemen und Einsamkeit gemacht und somit ist mir dieses Projekt ein persönliches Anliegen, denn sehr viele dieser Probleme können durch ein paar gute Freunde gelöst werden.</p>
                 </div>
             </div>
             <div class="profile img2">
