--- a/Website/HTML/loc_short.html
+++ b/Website/HTML/loc_short.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Unplugged</title>
   <link rel="stylesheet" href="/CSS/loc_short.css">
-  
+  <script type="text/javascript" src="/JS/loc_short.js"></script>
 </head>
 <body>
   <div class="cards">
@@ -14,7 +14,7 @@
       <div class="text">
         <h3>Ort1</h3>
         <p>Genießen Sie Ihre freie Zeit an einem Lagerfeuer und der frischen Luft. Weg vom Stress und rein in die Natur, pur.</p>
-        <button class="button">Besuchen</button>
+        <button class="button" onclick="">Besuchen</button>
       </div>
     </div>
 
@@ -23,7 +23,7 @@
       <div class="text">
         <h3>Ort2</h3>
         <p>Fühlen Sie die exotischen Züge Österreichs mit der umfangreichen Fauna und Flora.</p>
-        <button class="button">Besuchen</button>
+        <button class="button" onclick="">Besuchen</button>
       </div>
     </div>
 
@@ -32,7 +32,7 @@
       <div class="text">
         <h3>Ort3</h3>
         <p>Spüren Sie die erfrischende Brise des Tages und lassen Sie sich von der wirklichen Natur verzaubern.</p>
-        <button class="button">Besuchen</button>
+        <button class="button" onclick="">Besuchen</button>
       </div>
     </div>
   </div>
