feat: header and footer finished

--- a/Website/HTML/header.html
+++ b/Website/HTML/header.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/header.css">
-    <link rel="stylesheet" href="../CSS/test.css">
-    <!-- <link rel="stylesheet" href="../CSS/login.css">
-    <link rel="stylesheet" href="../CSS/register.css">
-    <link rel="stylesheet" href="../CSS/reset_pwd.css"> -->
     <script src="../JS/header.js"></script>
     
     <style>
@@ -73,7 +69,7 @@
                       <div class="label">Passwort</div>
                       <input type="password" placeholder="Wert" class="input" />
                     </div>
-                    <div class="button-group">
+                    <div class="frm-button-group">
                       <div class="frm-button">
                         <div class="frm-button-text">Einloggen</div>
                       </div>
@@ -90,8 +86,8 @@
                         <div class="label">E-Mail</div>
                         <input type="email" placeholder="max.muster@gmail.com" class="input" />
                     </div>
-                    <div class="button-group">
-                        <button type="frm-button" class="button" onclick="returnForgotPW()">
+                    <div class="frm-button-group-forgot-pw">
+                        <button type="button" class="frm-button" onclick="returnForgotPW()">
                             <div class="frm-button-text">Zurück</div>
                         </button>
                         <div class="frm-button">
@@ -111,11 +107,9 @@
                         <div class="label">Passwort</div>
                         <input type="password" placeholder="Wert" class="input">
                     </div>
-                    <div class="checkbox-field">
-                        <div class="button-group">
-                            <div class="frm-button">
-                                <div class="frm-button-text">Registrieren</div>
-                            </div>
+                    <div class="frm-button-group">
+                        <div class="frm-button">
+                            <div class="frm-button-text">Registrieren</div>
                         </div>
                     </div>
                 </div>
