changed: file names

--- a/Website/HTML/about.html
+++ b/Website/HTML/about.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Über uns - Unplugged</title>
-    <link rel="stylesheet" href="/CSS/about.css">
+    <link rel="stylesheet" href="../CSS/about.css">
 </head>
 <body>
     <main>
         <h1>Über uns</h1>
         <section class="profiles">
             <div class="profile img1">
-                <img src="/img/about/Florian.png" alt="Florian Kaltenbrunner">
+                <img src="../img/about/Florian.png" alt="Florian Kaltenbrunner">
                 <div>
                     <h2>Florian Kaltenbrunner</h2>
                     <p>Ich besuche das Linzer Technikum (4AHIT). Des Weiteren bin ich Mitgründer und einer der beiden Entwickler der Website von “unplugged”. Später möchte ich meine Ausbildung im Rahmen eines Studiums fortsetzen.</p>
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="profile img2">
-                <img src="/img/about/Joel.png" alt="Joel Kalkusch">
+                <img src="../img/about/Joel.png" alt="Joel Kalkusch">
                 <div>
                     <h2>Joel Kalkusch</h2>
                     <p>Hey, ich bin Joel Kalkusch und bin Schüler des Linzer Technikums. Ich agiere als Entwickler und bin einer der Gründer von “unplugged”. Ich gehe in die 4. Klasse Informationstechnologie und bin 19 Jahre alt.</p>
@@ -27,14 +27,14 @@
                 </div>
             </div>
             <div class="profile img1">
-                <img src="/img/about/Miriam.png" alt="Miriam Aistleitner">
+                <img src="../img/about/Miriam.png" alt="Miriam Aistleitner">
                 <div>
                     <h2>Miriam Aistleitner</h2>
                     <p>Ich bin Miriam Aistleitner, 18 Jahre alt und gehe in die Paul Hahn. Ich habe schon sehr früh Erfahrung mit Psychischen Problemen und Einsamkeit gemacht und somit ist mir dieses Projekt ein persönliches Anliegen, denn sehr viele dieser Probleme können durch ein paar gute Freunde gelöst werden.</p>
                 </div>
             </div>
             <div class="profile img2">
-                <img src="/img/about/" alt="Mario Steinbauer">
+                <img src="../img/about/" alt="Mario Steinbauer">
                 <div>
                     <h2>Mario Steinbauer</h2>
                     <p>Mein Name ist Mario Steinbauer. Ich befasse mich in meiner Freizeit sehr gern mit Psychologie. Mir ist das Projekt ein Anliegen, weil ich, sowie viele andere Jugendliche in Österreich, das Gefühl von Isolation und digitaler Überstimulation nur zu gut kenne. Ein gesundes soziales Umfeld ist essenziell für ein gutes Wohlbefinden.</p>
