--- a/Website/HTML/loc_short.html
+++ b/Website/HTML/loc_short.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Unplugged</title>
-  <link rel="stylesheet" href="/CSS/loc_short.css">
-  <script type="text/javascript" src="/JS/loc_short.js"></script>
+  <link rel="stylesheet" href="../CSS/loc_short.css">
+  <script type="text/javascript" src="../JS/loc_short.js"></script>
 </head>
 <body>
   <div class="cards">
     <div class="card">
-      <img src="/img/loc_short/loc1.png" alt="Ort 1">
+      <img src="../img/loc_short/loc1.png" alt="Ort 1">
       <div class="text">
         <h3>Ort1</h3>
         <p>Genießen Sie Ihre freie Zeit an einem Lagerfeuer und der frischen Luft. Weg vom Stress und rein in die Natur, pur.</p>
@@ -19,7 +19,7 @@
     </div>
 
     <div class="card">
-      <img src="/img/loc_short/loc2.png" alt="Ort 2">
+      <img src="../img/loc_short/loc2.png" alt="Ort 2">
       <div class="text">
         <h3>Ort2</h3>
         <p>Fühlen Sie die exotischen Züge Österreichs mit der umfangreichen Fauna und Flora.</p>
@@ -28,7 +28,7 @@
     </div>
 
     <div class="card">
-      <img src="/img/loc_short/loc3.png" alt="Ort 3">
+      <img src="../img/loc_short/loc3.png" alt="Ort 3">
       <div class="text">
         <h3>Ort3</h3>
         <p>Spüren Sie die erfrischende Brise des Tages und lassen Sie sich von der wirklichen Natur verzaubern.</p>
